<resources>
    <string name="app_name">MovieCatalogueAPI</string>
    <string name="movie_name">Movie Name</string>
    <string name="release">Release</string>
    <string name="description">This is description</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_tvshow">TV Show</string>
    <string name="poster_image">This is poster image</string>
    <string name="movieapi">MovieAPI</string>
    <string name="change_language_settings">Change language</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="airing_tv">TV Shows Airing Today</string>
    <string name="desc_tvairing" translatable="false">This is image tv airing today</string>
    <string name="popular_tv_shows" translatable="false">Popular TV Shows</string>
    <string name="backdrop_image">this is backdrop image</string>
    <string name="_70" translatable="false">70%</string>
    <string name="start_popularity">Start popularity</string>
    <string name="chart">Chart</string>
    <string name="popularity">111.111</string>
    <string name="desc">This is image</string>
    <string name="todo">this image</string>
    <string name="submission3_gdk_2019">Submission3 GDK 2019</string>
    <string name="icon">this is icon</string>
</resources>
