<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailMoviePopularActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/blur_image"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/backdrop_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/poster_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blur_image" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/Text1"
                    android:text="@string/movie_name" />

                <TextView
                    android:id="@+id/tv_release"
                    style="@style/Text2"
                    android:text="@string/release"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_border_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:contentDescription="@string/start_popularity"/>

        <ImageView
            android:id="@+id/img_popularity"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/ic_insert_chart_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:contentDescription="@string/chart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_vote"
            android:layout_marginTop="8dp"
            android:text="@string/_70"
            app:layout_constraintEnd_toEndOf="@+id/img_star"
            app:layout_constraintStart_toStartOf="@+id/img_star"
            app:layout_constraintTop_toBottomOf="@+id/img_star" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/popularity"
            app:layout_constraintEnd_toEndOf="@+id/img_popularity"
            app:layout_constraintStart_toStartOf="@+id/img_popularity"
            app:layout_constraintTop_toBottomOf="@+id/img_popularity" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>