<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp">

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/roundkorner"
            card_view:corner_radius="8dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_item_photo"
                android:scaleType="fitXY"
                android:contentDescription="@string/poster_image"
                android:background="@drawable/img_bg_card"/>
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
        <TextView
            android:layout_toEndOf="@id/roundkorner"
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/movie_name"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:ellipsize="end"
            android:maxLines="1"/>
        <TextView
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/roundkorner"
            android:id="@+id/tv_item_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_toEndOf="@id/roundkorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_release"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="4dp"
            android:text="@string/description"
            android:ellipsize="end"
            android:maxLines="3"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>